Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.33 [20111113] [svn: r426]
  - win: change DataBufferOffset type per MSDN; caused
    problem with 64 bit machines (buffered interface)
  - sg_inq, sg_vpd: sync with spc4r33
  - sg_luns: tweak documentation for vendor specific reports
  - sg_write_buffer: new --specific option for mode specific
    field; new mode 13 (spc4r32)
  - sg_vpd: add hp3par volume info vendor VPD page
    - fix 'scsi ports' [0x88] page problem
    - add 'sinq' pseudo page for standard inquiry response
    - add power consumption page
  - sg_ses: rework indexes, now two level
  - sg_logs: LB provision lpage extra (sbc3r28)
  - sg_modes: application tag mpage subcode 0xf0->0x2
  - sg_format: add --poll=PT option for request sense polling
    - improve handling of disks > 2 TB and DIF (protection)

Changelog for sg3_utils-1.32 [20110730] [svn: r410]
  - sg_sanitize: new utility for command added in sb3r27
  - sg_sat_identify: add '--ident' to output WWN
  - sg_ses: major rework of descriptor output
    - add --index, --descriptor, --join, --clear, --get,
      and --set options
  - sg_raw: exit status corrections
  - sg_decode_sense: add --nospace and --hex options
  - sg_logs: fix bug with large --maxlen
    - zero response length when resid implies it is invalid
    - add scope field to lb provisioning lpage (sb3r27)
  - sg_inq: sync version descriptors with spc4r31
  - sg_lib_data: sync asc/ascq codes with spc4r31
  - sg_vpd: add LBPRZ field in LB provisioning VPD page
  - sg_format: allow format of pdt 7 (some MO drives)
  - sg_cmd_basic: sg_cmds_process_resp() handle status good
    with a sense key other than no_sense (e.g. completed)
  - add README.iscsi

Changelog for sg3_utils-1.31 [20110216] [svn: r386]