@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.33 [20111113] [svn: r426]
+Changelog for sg3_utils-1.33 [20111117] [svn: r427]
   - win: change DataBufferOffset type per MSDN; caused
     problem with 64 bit machines (buffered interface)
   - sg_inq, sg_vpd: sync with spc4r33
@@ -18,6 +18,7 @@ Changelog for sg3_utils-1.33 [20111113] [svn: r426]
   - sg_modes: application tag mpage subcode 0xf0->0x2
   - sg_format: add --poll=PT option for request sense polling
     - improve handling of disks > 2 TB and DIF (protection)
+  - sg_write_same: no prot fields when wrprotect=0
 
 Changelog for sg3_utils-1.32 [20110730] [svn: r410]
   - sg_sanitize: new utility for command added in sb3r27
